2011-12-21  Jason Merrill  <jason@redhat.com>

	* doc/standards.texi (C++ language): Update for C++11.

2011-12-21  Jakub Jelinek  <jakub@redhat.com>

	* tree-vect-patterns.c (vect_operation_fits_smaller_type): Initialize
	*op0 and *op1 to NULL_TREE first to avoid warnings.
	* calls.c (initialize_argument_information): Initialize base to avoid
	warnings.

	PR middle-end/51644
	PR middle-end/51647
	* tree-eh.c (decide_copy_try_finally): At -O0, return true
	even when ndests is not 1, if there are only gimple_clobber_p
	(or debug) stmts in the finally sequence.
	* tree-inline.c (estimate_num_insns): Return 0 for gimple_clobber_p
	stmts.

2011-12-21  Aldy Hernandez  <aldyh@redhat.com>

	PR middle-end/51472
	* trans-mem.c (tm_log_add): Use create_tmp_var_reg.

2011-12-21  Martin Jambor  <mjambor@suse.cz>

	* tree-into-ssa.c (rewrite_update_stmt): Do not dump extra newlines.
	(rewrite_update_enter_block): Likewise.
	(dump_update_ssa): Likewise.
	(update_ssa): Likewise but also dump a newline at the beginning.

2011-12-21  Enkovich Ilya  <ilya.enkovich@intel.com>

	PR target/50038
	* implicit-zee.c: Delete.
	* ree.c: New file.
	* Makefile.in: Replace implicit-zee.c with ree.c.
	* config/i386/i386.c (ix86_option_override_internal): Rename
	flag_zee to flag_ree.
	* common.opt (fzee): Ignored.
	(free): New.
	* passes.c (init_optimization_passes): Replace pass_implicit_zee
	with pass_ree.
	* tree-pass.h (pass_implicit_zee): Delete.
	(pass_ree): New.
	* timevar.def (TV_ZEE): Delete.
	(TV_REE): New.
	* doc/invoke.texi: Add -free description.

2011-12-21  Tristan Gingold  <gingold@adacore.com>

	* config/vms/vms-protos.h (vms_function_section): New prototype.
	* config/vms/vms.c (vms_function_section): New function.
	* config/vms/vms.h (TARGET_ASM_FUNCTION_SECTION): Define.

2011-12-21  Richard Guenther  <rguenther@suse.de>

	PR lto/41159
	* tree-outof-ssa.c (insert_value_copy_on_edge): Use the
	mode of the pseudo as destination mode.  Only assert that